--- a/LEMA/Views/Usuario/Form.cshtml
+++ b/LEMA/Views/Usuario/Form.cshtml
@@ -1,44 +1,73 @@
 ﻿@model UsuarioViewModel
-@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-<h2>Cadastro de Jogos</h2>
-<form action="Save" method="post">
-    <label for="Id" class="control-label">ID</label>
-
+<head>
+    <link rel="stylesheet" href="~/css/usuario.css">
+</head>
+<h2>Cadastro de Usuário</h2>
+<form action="Save" method="post" enctype="multipart/form-data" class="col-md-6">
     <input type="hidden" value="@ViewBag.Operacao" name="operacao" />
-    <br />
-    @if (ViewBag.Operacao != "I")
-    {
-        <input type="hidden" name="Id" value="@Model.Id" />
-    }
-    <br />
-    <span asp-validation-for="Id" class="text-danger"></span>
-    <br />
-    <br />
-    <label for="Usuario" class="control-label">Usuario</label>
-    <br />
-    <input type="text" Name="Usuario" value="@Model.Usuario" />
-    <br />
-    <span asp-validation-for="Usuario" class="text-danger"></span>
-    <br />
-    <label for="Senha" class="control-label">Senha</label>
-    <br />
-    <input type="text" Name="Senha" value="@Model.Senha" />
-    <br />
-    <span asp-validation-for="Senha" class="text-danger"></span>
-    <br />
-    <label for="Perfil" class="control-label">Perfil</label>
-    <br />
-    <select asp-for="Perfil" class="form-control">
-        <option value="">Selecione...</option> <!-- Opção Selecione adicionada -->
-        <option value="Padrão">Padrão</option>
-        <option value="Administrador">Administrador</option>
-    </select>
-    <br />
-    <span asp-validation-for="Perfil" class="text-danger"></span>
-    <br />
-    <input type="submit" class="btn btn-success" value="Salvar dados" />
-    <br />
 
+    <div class="row">
+        <div class="col-md-3 card-profile">
+            <label for="Imagem" class="bx bx-plus-circle">
+                <input type="file" name="Imagem" id="Imagem" onchange="exibirImagem()" style="display: none;">
+            </label>
+
+            @if (string.IsNullOrEmpty(Model.ImagemEmBase64))
+            {
+                <img id="imgPreview" src="~/img/Profile-Icon.png" class="img-responsive img-thumbnail" width="100">
+            }
+            else
+            {
+                <img id="imgPreview" src="data:image/jpeg;base64,@Model.ImagemEmBase64" class="img-responsive img-thumbnail" width="100">
+            }
+
+            <span asp-validation-for="Imagem" class="text-danger"></span>
+        </div>
+        <div class="col-md-9">
+            <div class="p-3 py-5">
+                @if (ViewBag.Operacao != "I")
+                {
+                    <input type="hidden" name="Id" value="@Model.Id" />
+                }
+                <div class="form-group">
+                    <label for="Usuario" class="control-label">Usuário</label>
+                    <input type="text" Name="Usuario" value="@Model.Usuario" class="form-control" />
+                    <span asp-validation-for="Usuario" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label for="Senha" class="control-label">Senha</label>
+                    <input type="text" Name="Senha" value="@Model.Senha" class="form-control" />
+                    <span asp-validation-for="Senha" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label for="Perfil" class="control-label">Perfil</label>
+                    <select asp-for="Perfil" class="form-control">
+                        <option value="">Selecione...</option>
+                        <option value="Padrão">Padrão</option>
+                        <option value="Administrador">Administrador</option>
+                    </select>
+                    <span asp-validation-for="Perfil" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <br />
+                    <input type="submit" class="btn btn-success" value="Salvar dados" />
+                    <a href="/Usuario/Index" class="btn btn-danger">Cancelar</a>
+
+                </div>
+            </div>
+        </div>
+    </div>
 </form>
+
+<script>
+    function exibirImagem() {
+        var oFReader = new FileReader();
+        oFReader.readAsDataURL(document.getElementById("Imagem").files[0]);
+        oFReader.onload = function (oFREvent) {
+            document.getElementById("imgPreview").src = oFREvent.target.result;
+        };
+    }
+</script>
+
+
+
