--- a/LEMA/Views/Usuario/Form.cshtml
+++ b/LEMA/Views/Usuario/Form.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Cadastro Usuário";
 }
 <link rel="stylesheet" href="~/css/usuario.css">
+<script type="text/javascript" src="~/js/usuario.js"></script>
 
 <h1 class="padding-zero">Cadastro de Usuário</h1>
 <form action="Save" method="post" enctype="multipart/form-data" class="col-md-6 padding-zero">
@@ -13,7 +14,7 @@
     <div class="row">
         <div class="col-md-3 card-profile">
             <label for="Imagem" class="bx bx-plus-circle">
-                <input type="file" name="Imagem" id="Imagem" onchange="exibirImagem()" style="display: none;">
+                <input type="file" name="Imagem" id="Imagem" onchange="usuario.exibirImagem()" style="display: none;">
             </label>
 
             @if (string.IsNullOrEmpty(Model.ImagemEmBase64))
@@ -24,8 +25,9 @@
             {
                 <img id="imgPreview" src="data:image/jpeg;base64,@Model.ImagemEmBase64" class="img-responsive img-thumbnail" width="100">
             }
-
+            <br />
             <span asp-validation-for="Imagem" class="text-danger"></span>
+
         </div>
         <div class="col-md-9">
             <div class="p-3 py-5">
@@ -37,11 +39,13 @@
                     <label for="Usuario" class="control-label">Usuário</label>
                     <input type="text" Name="Usuario" value="@Model.Usuario" class="form-control" />
                     <span asp-validation-for="Usuario" class="text-danger"></span>
+                    <br />
                 </div>
                 <div class="form-group">
                     <label for="Senha" class="control-label">Senha</label>
                     <input type="text" Name="Senha" value="@Model.Senha" class="form-control" />
                     <span asp-validation-for="Senha" class="text-danger"></span>
+                    <br />
                 </div>
                 <div class="form-group">
                     <label for="Perfil" class="control-label">Perfil</label>
@@ -54,24 +58,13 @@
                 </div>
                 <div class="form-group">
                     <br />
-                    <input type="submit" class="btn btn-success" value="Salvar dados" />
-                    <a href="/Usuario/Index" class="btn btn-danger">Cancelar</a>
+                    <input type="submit" class="btn" value="Salvar dados" />
+                    <a href="/Usuario/Index" class="btn" style="color: darkred;">Cancelar</a>
 
                 </div>
             </div>
         </div>
     </div>
 </form>
-
-<script>
-    function exibirImagem() {
-        var oFReader = new FileReader();
-        oFReader.readAsDataURL(document.getElementById("Imagem").files[0]);
-        oFReader.onload = function (oFREvent) {
-            document.getElementById("imgPreview").src = oFREvent.target.result;
-        };
-    }
-</script>
-
 
 
