--- a/LEMA/Views/Shared/_Layout.cshtml
+++ b/LEMA/Views/Shared/_Layout.cshtml
@@ -63,6 +63,8 @@
                 }
                 <li class="profile">
                     <div class="profile-details">
+                        <a href="/usuario/edit?id=@ViewBag.IdUsuario" class="bx bx-edit"></a>
+
                         @if (string.IsNullOrEmpty(ViewBag.Imagem64))
                         {
                             <img src="~/img/Profile-Icon.png" alt="Foto">
