--- a/LEMA/Views/Usuario/Form.cshtml
+++ b/LEMA/Views/Usuario/Form.cshtml
@@ -47,19 +47,22 @@
                     <span asp-validation-for="Senha" class="text-danger"></span>
                     <br />
                 </div>
-                <div class="form-group">
-                    <label for="Perfil" class="control-label">Perfil</label>
-                    <select asp-for="Perfil" class="form-control">
-                        <option value="">Selecione...</option>
-                        <option value="Padrão">Padrão</option>
-                        <option value="Administrador">Administrador</option>
-                    </select>
-                    <span asp-validation-for="Perfil" class="text-danger"></span>
-                </div>
+                @if (ViewBag.Perfil == "Administrador")
+                {
+                    <div class="form-group">
+                        <label for="Perfil" class="control-label">Perfil</label>
+                        <select asp-for="Perfil" class="form-control">
+                            <option value="">Selecione...</option>
+                            <option value="Padrão">Padrão</option>
+                            <option value="Administrador">Administrador</option>
+                        </select>
+                        <span asp-validation-for="Perfil" class="text-danger"></span>
+                    </div>
+                }
                 <div class="form-group">
                     <br />
                     <input type="submit" class="btn" value="Salvar dados" />
-                    <a href="/Usuario/Index" class="btn" style="color: darkred;">Cancelar</a>
+                    <a href="#" onclick="history.back()" class="btn" style="color: darkred;">Cancelar</a>
 
                 </div>
             </div>
