--- a/LEMA/wwwroot/css/menu.css
+++ b/LEMA/wwwroot/css/menu.css
@@ -311,3 +311,21 @@
         font-weight: 500;
         margin: 18px
     }
+
+.sidebar li .profile-details a {
+    display: none;
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    font-size: 20px;
+    background: rgba(0,0,0,0.3);
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border-radius: 100%;
+    color: #000000;
+}
+
+.sidebar li .profile-details:hover a{
+    display: flex !important;
+}
