Editar usuario/ correção erro registrar/ esconder senha tabela

--- a/LEMA/Views/Login/Login.cshtml
+++ b/LEMA/Views/Login/Login.cshtml
@@ -22,10 +22,10 @@
                             <span asp-validation-for="Senha" class="text-danger"></span>
                             <i class="input-icon uil uil-lock-alt"></i>
                         </div>
-                        <button type="submit" class="btn mt-4" style="padding: 0px 38px;">Log In</button>
+                        <button type="submit" class="btn mt-4" style="padding: 0px 38px;">Entrar</button>
                         <div class="form-group mt-2">
                             <p>ou</p>
-                            <a href="/Login/Register" class="btn">Registrar-se</a>
+                            <a href="/Login/Register" class="btn">Registrar</a>
                         </div>
                     </div>
                 </div>
