--- a/LEMA/Views/Shared/_Layout.cshtml
+++ b/LEMA/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
                 </li>
                 <li>
                     <a href="#">
-                        <i class='bx bxs-group'></i>
+                        <i class='bx bxs-bulb'></i>
                         <span class="links_name">Sobre</span>
                     </a>
                     <span class="tooltip">Sobre</span>
@@ -55,10 +55,10 @@
                 {
                     <li>
                         <a href="/Usuario/Index">
-                            <i class='bx bxs-cog'></i>
-                            <span class="links_name">Configurações</span>
+                            <i class='bx bxs-user-account'></i>
+                            <span class="links_name">Registros</span>
                         </a>
-                        <span class="tooltip">Configurações</span>
+                        <span class="tooltip">Registros</span>
                     </li>
                 }
                 <li class="profile">
