--- a/LEMA/wwwroot/css/usuario.css
+++ b/LEMA/wwwroot/css/usuario.css
@@ -66,7 +66,7 @@ td {
     }
 
 .btn-register {
-    margin-left: 250px;
+    margin-left: 38%;
 }
 /*============================================================*/
 card {
