--- a/LEMA/Views/Shared/_Layout.cshtml
+++ b/LEMA/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
                     <span class="tooltip">Dispositivo</span>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="/Sobre/Index">
                         <i class='bx bxs-bulb'></i>
                         <span class="links_name">Sobre</span>
                     </a>
