--- a/LEMA/Views/Sobre/Index.cshtml
+++ b/LEMA/Views/Sobre/Index.cshtml
@@ -2,16 +2,25 @@
     ViewData["Title"] = "Sobre";
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
 
-<h3>Development Mode</h3>
-<p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
-<p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
-</p>
+<section class="home-section">
+    <div class="text">Sobre</div>
+    <div class="about-text">
+        <p>Nós somos o LEMA, e nossa missão é oferecer soluções inovadoras para garantir a eficiência e qualidade do seu processo de secagem.</p>
+        <p>Através da integração de sistemas IoT (Internet das Coisas), os dados são em tempo real diretamente das suas estufas, proporcionando uma visão abrangente do estado térmico.</p>
+        <p>Nossa plataforma oferece dashboards intuitivos e altamente personalizáveis, permitindo que você monitore e controle a temperatura de suas estufas com facilidade.</p>
+        <p>Estamos aqui para ajudá-lo a alcançar os melhores resultados possíveis e garantir a excelência operacional do seu negócio.</p>
+        <p>Escolha o LEMA e eleve o controle de temperatura em suas estufas para um novo nível de eficiência e qualidade.</p>
+    </div>
+    <div>
+        <br />
+        <br />
+        <p><strong>INTEGRANTES</strong></p>
+        <p>Arthur Farias dos Santos - 081220006</p>
+        <p>Eloá Torres Cunha - 082210021</p>
+        <p>Levi Matheus Bastos - 081220012</p>
+        <p>Maycon Silva Cardoso - 081220012</p>
+    </div>
+
+</section>
+
