--- a/LEMA/Views/Shared/_Layout.cshtml
+++ b/LEMA/Views/Shared/_Layout.cshtml
@@ -64,6 +64,14 @@
                         </a>
                         <span class="tooltip">Registros</span>
                     </li>
+                    <li>
+                        <a href="/Empresa/Index">
+                            <i class='bx bxs-buildings'></i>
+                            <span class="links_name">Empresas</span>
+                        </a>
+                        <span class="tooltip">Empresas</span>
+                    </li>
+
                 }
                 <li class="profile">
                     <div class="profile-details">
