--- a/LEMA/Views/Usuario/Index.cshtml
+++ b/LEMA/Views/Usuario/Index.cshtml
@@ -18,6 +18,7 @@
             <th style="text-align:center">USUÁRIO</th>
             <th style="text-align:center">SENHA</th>
             <th style="text-align:center">PERFIL</th>
+            <th style="text-align:center">EMPRESA</th>
             <th style="text-align:center">AÇÕES</th>
         </tr>
         @foreach (var usuario in Model)
@@ -40,6 +41,7 @@
                 </td>
 
                 <td style="text-align:center">@usuario.Perfil</td>
+                <td style="text-align:center">@usuario.NomeEmpresa</td>
                 @if (usuario.Id != ViewBag.IdUsuario)
                 {
                     <td style="text-align:center">
