Ajuste nome empresa sidebar/ ajuste validações usuario e empresa

--- a/LEMA/Views/Shared/_Layout.cshtml
+++ b/LEMA/Views/Shared/_Layout.cshtml
@@ -87,7 +87,7 @@
                         }
                         <div class="name_job">
                             <div class="name">@ViewBag.Username</div>
-                            <div class="job">Empresa</div>
+                            <div class="job">@ViewBag.NomeEmpresa</div>
                         </div>
                     </div>
                     <a onclick="menu.confirma()">
