--- a/LEMA/Views/Empresa/Form.cshtml
+++ b/LEMA/Views/Empresa/Form.cshtml
@@ -51,7 +51,7 @@ else
                 </div>
                 <div class="form-group">
                     <label for="Telefone" class="control-label">Telefone</label>
-                    <input type="text" Name="Telefone" value="@Model.Telefone" class="form-control" />
+                    <input type="text" id="Telefone" name="Telefone" value="@Model.Telefone" class="form-control" />
                     <span asp-validation-for="Telefone" class="text-danger"></span>
                     <br />
                 </div>
@@ -65,5 +65,3 @@ else
         </div>
     </div>
 </form>
-
-
