--- a/LEMA/Views/Dashboard/Index.cshtml
+++ b/LEMA/Views/Dashboard/Index.cshtml
@@ -5,7 +5,7 @@
 <script type="text/javascript" src="~/js/dashboard.js"></script>
 
 <section class="home-section">
-    <div class="text">Dashboard</div>
+    <h1 class="text">Dashboard</h1>
 
     <figure class="highcharts-figure" style="padding-right:50px">
         <div id="chart-realtime"></div>
