--- a/LEMA/Views/Shared/_Layout.cshtml
+++ b/LEMA/Views/Shared/_Layout.cshtml
@@ -23,9 +23,12 @@
     {
         <div class="sidebar">
             <div class="logo-details">
-                <img class="icon" src="~/img/LogoPNG.png" alt="Logo">
+                <a href="/Home/Index">
+                    <img class="icon" src="~/img/LogoPNG.png" alt="Logo">
+                </a>
                 <i class='bx bx-menu' id="btn"></i>
             </div>
+
             <ul class="nav-list">
                 <li>
                     <a href="/Home/Index">
