--- a/LEMA/Views/Dispositivo/Form.cshtml
+++ b/LEMA/Views/Dispositivo/Form.cshtml
@@ -4,14 +4,25 @@
     ViewData["Title"] = "Cadastro Dispositivo";
 }
 
+<link rel="stylesheet" href="~/css/usuario.css">
+
 <section class="home-section">
-    <div class="text">Dispositivo</div>
 
-    <form action="Save" method="post" enctype="multipart/form-data">
+    @if (ViewBag.Operacao == "I")
+    {
+        <h1 class="text">Cadastrar Dispositivo</h1>
+
+    }
+    else
+    {
+        <h1 class="text">Editar Dispositivo</h1>
+    }
+    <form action="Save" method="post" enctype="multipart/form-data" class="col-md-6">
         <input type="hidden" value="@ViewBag.Operacao" name="operacao" />
+        <br />
+        <br />
         <div class="row">
-
-            <div class="col-md-6">
+            <div class="col-md-9">
                 <div class="p-3 py-5">
                     @if (ViewBag.Operacao != "I")
                     {
@@ -22,13 +33,13 @@
                     }
                     <div class="form-group">
                         <label for="Nome" class="control-label">Nome do dispositivo</label>
-                        <input type="text" Name="Nome" value="@Model.Nome" class="form-control" autocomplete="off"/>
+                        <input type="text" Name="Nome" value="@Model.Nome" class="form-control" style="width: 130%;" autocomplete="off" />
                         <span asp-validation-for="Nome" class="text-danger"></span>
                         <br />
                     </div>
                     <div class="form-group">
                         <label for="Descricao" class="control-label">Descrição</label>
-                        <input type="text" Name="Descricao" value="@Model.Descricao" class="form-control" autocomplete="off" />
+                        <input type="text" Name="Descricao" value="@Model.Descricao" class="form-control" style="width: 130%;" autocomplete="off" />
                         <span asp-validation-for="Descricao" class="text-danger"></span>
                         <br />
                     </div>
