--- a/LEMA/Views/Dispositivo/Index.cshtml
+++ b/LEMA/Views/Dispositivo/Index.cshtml
@@ -7,12 +7,12 @@
 <link rel="stylesheet" href="~/css/site.css">
 <script type="text/javascript" src="~/js/dispositivo.js"></script>
 
-<div class="padding-zero">
+<section class="home-section">
 
-    <h2>Listagem Dispositivo</h2>
+    <h1 class="text">Listagem Dispositivo</h1>
     <br />
     <br />
-    <table class="table table-responsive table-hover">
+    <table class="table table-hover">
         <tr>
             <th style="text-align:center">ID</th>
             <th style="text-align:center">NOME</th>
@@ -30,14 +30,14 @@
 
                 @* A SP TERA QUE TRAZER SOMENTE OS DISPOSITIVOS DO USUARIO ATUAL, ADMINISTRADOR PODERÁ VER TODAS - não foi feito *@
                 <td style="text-align:center">
-                    <a href="/dispositivo/edit?id=@dispositivo.Id"> <span class="bx bxs-pencil"></span></a>
-                    <a onclick="dispositivo.confirma(@dispositivo.Id)"> <span class="bx bxs-trash-alt"></span></a>
+                    <a href="/dispositivo/edit?id=@dispositivo.Id"> <span class="bx bxs-pencil icon-action"></span></a>
+                    <a onclick="dispositivo.confirma(@dispositivo.Id)"> <span class="bx bxs-trash-alt icon-action"></span></a>
                 </td>
             </tr>
         }
     </table>
     <a href="/dispositivo/create" class="btn btn-register">Novo Registro</a>
-</div>
+</section>
 <div class="delete">
     <dialog id="deleteModal" style="padding: 40px;">
         <div> <i class="bx bx-alarm-exclamation" style="font-size: 100px; margin-left: 32%;"> </i> </div>
