--- a/LEMA/Views/Empresa/Index.cshtml
+++ b/LEMA/Views/Empresa/Index.cshtml
@@ -8,12 +8,12 @@
 <link rel="stylesheet" href="~/css/site.css">
 <script type="text/javascript" src="~/js/empresa.js"></script>
 
-<div class="padding-zero">
+<section class="home-section">
 
-    <h2>Listagem de Empresas</h2>
+    <h1 class="text">Listagem de Empresas</h1>
     <br />
     <br />
-    <table class="table table-responsive table-hover">
+    <table class="table table-hover">
         <tr>
             <th style="text-align:center">FOTO</th>
             <th style="text-align:center">NOME</th>
@@ -23,7 +23,7 @@
         @foreach (var empresa in Model)
         {
             <tr>
-                <td>
+                <td style="text-align:center">
                     @if (string.IsNullOrEmpty(empresa.ImagemEmBase64))
                     {
                         <img id="imgPreview" src="~/img/Company-Icon.png" class="img-responsive" width="50">
@@ -36,15 +36,15 @@
                 <td style="text-align:center">@empresa.Nome</td>
                 <td style="text-align:center">@empresa.Telefone</td>
                 <td style="text-align:center">
-                    <a href="/empresa/edit?id=@empresa.Id"> <span class="bx bxs-pencil"></span></a>
-                    <a onclick="empresa.confirma(@empresa.Id)"> <span class="bx bxs-trash-alt"></span></a>
+                    <a href="/empresa/edit?id=@empresa.Id"> <span class="bx bxs-pencil icon-action"></span></a>
+                    <a onclick="empresa.confirma(@empresa.Id)"> <span class="bx bxs-trash-alt icon-action"></span></a>
                 </td>
 
             </tr>
         }
     </table>
     <a href="/empresa/create" class="btn btn-register">Novo Registro</a>
-</div>
+</section>
 <div class="delete">
     <dialog id="deleteModal" style="padding: 40px;">
         <div> <i class="bx bx-alarm-exclamation" style="font-size: 100px; margin-left: 32%;"> </i> </div>
