--- a/LEMA/Views/Usuario/Index.cshtml
+++ b/LEMA/Views/Usuario/Index.cshtml
@@ -7,12 +7,12 @@
 <link rel="stylesheet" href="~/css/usuario.css">
 <script type="text/javascript" src="~/js/usuario.js"></script>
 
-<div class="padding-zero">
+<section class="home-section">
 
-    <h2>Listagem de Usuários</h2>
+    <h1 class="text">Listagem de Usuários</h1>
     <br />
     <br />
-    <table class="table table-responsive table-hover">
+    <table class="table table-hover">
         <tr>
             <th style="text-align:center">FOTO</th>
             <th style="text-align:center">USUÁRIO</th>
@@ -24,7 +24,7 @@
         @foreach (var usuario in Model)
         {
             <tr>
-                <td>
+                <td style="text-align:center">
                     @if (string.IsNullOrEmpty(usuario.ImagemEmBase64))
                     {
                         <img id="imgPreview" src="~/img/Profile-Icon.png" class="img-responsive" width="50">
@@ -45,8 +45,8 @@
                 @if (usuario.Id != ViewBag.IdUsuario)
                 {
                     <td style="text-align:center">
-                        <a href="/usuario/edit?id=@usuario.Id"> <span class="bx bxs-pencil"></span></a>
-                        <a onclick="usuario.confirma(@usuario.Id)"> <span class="bx bxs-trash-alt"></span></a>
+                        <a href="/usuario/edit?id=@usuario.Id"> <span class="bx bxs-pencil icon-action"></span></a>
+                        <a onclick="usuario.confirma(@usuario.Id)"> <span class="bx bxs-trash-alt icon-action"></span></a>
                     </td>
                 }
                 else
@@ -57,7 +57,7 @@
         }
     </table>
     <a href="/usuario/create" class="btn btn-register">Novo Registro</a>
-</div>
+</section>
 <div class="delete">
     <dialog id="deleteModal" style="padding: 40px;">
         <div> <i class="bx bx-alarm-exclamation" style="font-size: 100px; margin-left: 32%;"> </i> </div>
